--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -108,7 +108,7 @@
                     <div class="grid grid-cols-80/20 items-center align-items-center m-2">
                         <h5 class="md:text-xl lg:text-2xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{item.name}}</h5>
                         <div class="h-[50px]">
-                            <img class="rounded-r-lg h-[50px]" src="{{item.image}}" alt="product image" />
+                            <img class="rounded-r-lg h-[50px] dark:text-white" src="{{item.image}}" alt="Product image" />
                         </div>
                     </div>
                     <hr class="h-px mr-4 ml-4 bg-primary-100 border-0">
