--- a/src/app/pages/organization-details/organization-details.component.html
+++ b/src/app/pages/organization-details/organization-details.component.html
@@ -26,7 +26,7 @@
     <!-- START HEADER CARD -->
     <div class="w-full lg:h-fit mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border lg:grid lg:grid-cols-60/40">
         <div class="flex lg:hidden overflow-hidden justify-center items-center bg-white rounded-t-lg w-full">
-            <img class="rounded-t-lg object-contain" src="{{logo}}" alt="product image" />
+            <img class="rounded-t-lg object-contain dark:text-white" src="{{logo}}" alt="Organization profile image" />
         </div>
         <div class="grid grid-rows-auto p-4 md:p-8 h-fit">
             <div class="mt-2 h-fit">
@@ -43,7 +43,7 @@
                 <!-- Imagen de fondo difuminada -->
                 <div class="object-contain overflow-hidden absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{logo}});filter: blur(20px);"></div>
                 <!-- Imagen superior -->
-                <img class="object-contain max-h-[300px] z-10 p-8" src="{{logo}}" alt="Descripción de la imagen">
+                <img class="object-contain max-h-[300px] z-10 p-8 dark:text-white" src="{{logo}}" alt="Organization profile image">
             </div>
         </div>
     </div>
