--- a/src/app/pages/product-inventory/inventory-items/product-inv-detail/product-inv-detail.component.html
+++ b/src/app/pages/product-inventory/inventory-items/product-inv-detail/product-inv-detail.component.html
@@ -27,7 +27,7 @@
     <!-- START HEADER CARD -->
     <div class="w-full lg:h-fit mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border lg:grid lg:grid-cols-60/40">
         <div class="flex lg:hidden overflow-hidden justify-center items-center bg-white rounded-t-lg w-full">
-            <img class="rounded-t-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
+            <img class="rounded-t-lg h-5/6 w-5/6 object-contain dark:text-white" src="{{getProductImage()}}" alt="Product image" />
         </div>
         <div class="grid grid-rows-auto p-4 md:p-8 h-fit">
             <div class="mt-2 h-fit">
@@ -44,7 +44,7 @@
                 <!-- Imagen de fondo difuminada -->
                 <div class="object-contain overflow-hidden absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage()}});filter: blur(20px);"></div>
                 <!-- Imagen superior -->
-                <img class="object-contain h-5/6 w-5/6 max-h-[350px] z-10 p-8" src="{{getProductImage()}}" alt="Descripción de la imagen">
+                <img class="object-contain h-5/6 w-5/6 max-h-[350px] z-10 p-8 dark:text-white" src="{{getProductImage()}}" alt="Product image">
             </div>
         </div>
     </div>
