--- a/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
@@ -307,7 +307,7 @@
                             @for (item of orderToShow.productOrderItem; track item.id; let idx = $index) {
                                 <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
                                     <td class="px-6 py-4 text-center align-middle flex justify-center items-center">
-                                        <img class="w-16 object-contain z-10 " src="{{getProductImage(item)}}" alt="Descripción de la imagen">
+                                        <img class="w-16 object-contain z-10 dark:text-white" src="{{getProductImage(item)}}" alt="Product image">
                                     </td>
                                     <td class="px-6 py-4 text-center align-middle">
                                         {{item.name}}
