--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -8,7 +8,7 @@
       <div class="absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage()}});filter: blur(20px);"></div>
       <!-- Imagen superior -->
       <!-- <img crossorigin="anonymous" #myProdImage class="h-5/6 w-5/6 object-contain z-10" src="{{getProductImage()}}" alt="Descripción de la imagen">-->
-      <img class="h-5/6 w-5/6 object-contain z-10" src="{{getProductImage()}}" alt="Descripción de la imagen">
+      <img class="h-5/6 w-5/6 object-contain z-10 dark:text-white" src="{{getProductImage()}}" alt="Product image">
     </div>
   </div>
 
@@ -143,7 +143,7 @@
 
               <div class="relative h-[200px] overflow-hidden flex justify-center items-center border border-1 border-gray-200 dark:border-gray-700 rounded-tr-lg">
                 <div class="absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage()}});filter: blur(20px);"></div>
-                <img class="rounded-r-lg h-5/6 w-5/6 object-contain z-10" src="{{getProductImage()}}" alt="product image" />
+                <img class="rounded-r-lg h-5/6 w-5/6 object-contain z-10 dark:text-white" src="{{getProductImage()}}" alt="Product image" />
               </div>
 
               
