FIX Ticket#83772 - now filters banner only shows on search and catalogs search sections

--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -111,8 +111,8 @@
                      <img class="rounded-lg w-fit h-[100px]" src="https://placehold.co/600x400/svg" alt="">
                   }
                </button>
-               <div class="p-2 flex items-center">
-                  <p class="text-lg text-gray-700 dark:text-gray-200">{{item.name}}</p>
+               <div class="p-2 flex items-center w-2/3">
+                  <p class="text-lg text-gray-700 dark:text-gray-200 text-wrap break-all">{{item.name}}</p>
                </div>               
                <div class="p-2 flex items-center">
                   @if (item.options.pricing) {
