--- a/src/app/pages/search-catalog/search-catalog.component.html
+++ b/src/app/pages/search-catalog/search-catalog.component.html
@@ -1,5 +1,5 @@
-
-<div class="pr-8 pl-8 pb-8 pt-2">
+<bae-categories-panel class="fixed z-30 w-full top-[72px] transition transform opacity-0 duration-200" [ngClass]="showPanel ? 'opacity-100' : 'hidden'"></bae-categories-panel>
+<div class="pr-8 pl-8 pb-8 pt-2" [ngClass]="showPanel ? 'pt-[75px]' : ''">
     <!-- Breadcrumb -->
     <div class="pb-2">
         <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
