--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -66,7 +66,7 @@
                     <span class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ml-3">5.0</span>
                 </div>-->
             </div>
-            <div class="h-fit">
+            <div class="h-fit overflow-x-hidden">
                 @for (cat of categories; track cat.id) {
                     <bae-badge class="mr-2" [category]=cat></bae-badge>
                 }
