--- a/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
+++ b/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
@@ -110,7 +110,7 @@
                         
                         <div class="bg-cover bg-right-bottom bg-opacity-25 rounded-lg" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
                             <div class="px-5 py-5 bg-secondary-50/95 dark:bg-secondary-100/95 rounded-lg">
-                            <div class="h-[30px] overflow-y-hidden">
+                            <div class="h-[30px] overflow-y-hidden overflow-x-hidden">
                             @for (cat of inv.product?.category; track cat.id) {
                                 <bae-badge class="ml-2" [category]=cat></bae-badge>
                             }
