--- a/src/app/shared/categories-recursion/categories-recursion.component.html
+++ b/src/app/shared/categories-recursion/categories-recursion.component.html
@@ -1,7 +1,7 @@
 
 
 <tr class="flex border-b hover:bg-gray-200 dark:border-gray-700 dark:bg-secondary-300 dark:hover:bg-secondary-200 w-full justify-between">
-    <td class="flex px-6 py-4 w-3/5">
+    <td class="flex px-6 py-4 w-3/5 text-wrap break-all">
         {{path}} / <b>{{child.name}}</b>
     </td>
     <td class="hidden md:flex px-6 py-4 w-fit">
@@ -15,6 +15,6 @@
 
 @if(child.children && child.children.length>0){
     @for(innerchild of child.children; track innerchild){
-        <categories-recursion class="w-full" [child]="innerchild" [selected]="selected" [parent]="child" [path]="path+' / '+child.name"></categories-recursion>
+        <categories-recursion class="w-full text-wrap break-all" [child]="innerchild" [selected]="selected" [parent]="child" [path]="path+' / '+child.name"></categories-recursion>
     }
 }
