--- a/src/app/shared/categories-recursion-list/categories-recursion-list.component.html
+++ b/src/app/shared/categories-recursion-list/categories-recursion-list.component.html
@@ -1,7 +1,7 @@
 
 
 <tr class="flex border-b hover:bg-gray-200 dark:border-gray-700 dark:bg-secondary-300 dark:hover:bg-secondary-200 w-full justify-between">
-    <td class="flex px-6 py-4 w-2/4">
+    <td class="flex px-6 py-4 w-2/4 text-wrap break-all">
         {{path}} / <b>{{child.name}}</b>
     </td>
     <td class="hidden md:flex px-6 py-4 w-fit">
@@ -36,6 +36,6 @@
 
 @if(child.children && child.children.length>0){
     @for(innerchild of child.children; track innerchild){
-        <categories-recursion-list class="w-full" [child]="innerchild" [parent]="child" [path]="path+' / '+child.name"></categories-recursion-list>
+        <categories-recursion-list class="w-full text-wrap break-all" [child]="innerchild" [parent]="child" [path]="path+' / '+child.name"></categories-recursion-list>
     }
 }
